--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>코딩기초 ㅇ0ㅇ</h1>
-    <ul>html</ul>
-    <ul>css</ul>
-    <ul>github</ul>
+    <ul>
+        <li>github</li>
+        <li>html</li>
+        <li>python</li>
+    </ul>
 </body>
 </html>
